--- a/abf-statracker/src/app/app.component.html
+++ b/abf-statracker/src/app/app.component.html
@@ -1,8 +1,12 @@
+<app-navbar></app-navbar>
+
 <main role="main" class="container">
 
   <div class="starter-template">
     <h1>Bootstrap starter template</h1>
     <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+    <h3>Course List</h3>
+    <app-courses-list></app-courses-list>
   </div>
 
 </main>
