--- a/abf-statracker/src/app/app.component.html
+++ b/abf-statracker/src/app/app.component.html
@@ -7,6 +7,7 @@
     <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
     <h3>Course List</h3>
     <app-stats-list></app-stats-list>
+    <app-add-stat></app-add-stat>
   </div>
 
 </main>
