--- a/abf-statracker/src/app/stats-list/stats-list.component.html
+++ b/abf-statracker/src/app/stats-list/stats-list.component.html
@@ -1,13 +1,11 @@
 <ul>
-  <div *ngFor="let course of statsObservable | async">
+  <div *ngFor="let stat of statsObservable | async">
     <ngb-alert type="info" [dismissible]="false">
-      <h3><a href="#">{{course.title}}</a></h3>
-      <p>{{course.description}}</p>
-      <button (click)="print(course)"></button>>
+      <h3><a href="#">{{stat.name}}</a></h3>
+      <p>{{stat.time}}</p>
       <div>
-        <a href="{{course.url}}" target="_blank" class="btn btn-danger">Go to Course</a>
+        <p>{{stat.points}}<p></p>
       </div>
     </ngb-alert>  
   </div>
 </ul>
-<button (click)="addCourse()">add a course!</button>
