--- a/abf-statracker/src/app/add-stat/add-stat.component.html
+++ b/abf-statracker/src/app/add-stat/add-stat.component.html
@@ -6,7 +6,37 @@
     </button>
   </div>
   <div class="modal-body">
-    <p>One fine body&hellip;</p>
+    <form id="form">
+      <div class="modal-boy">
+        <div class="container">
+          <div class="form-group">
+            <label for="number">Number</label>
+            <input type="number" class="form-control">
+          </div>
+          <div class="form-group">
+              <label for="player">Player</label>
+              <input type="text" class="form-control">
+            </div>
+          <div class="form-group">
+              <label for="minutes">Minutes</label>
+              <input type="time" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="rebounds">Rebounds</label>
+            <input type="number" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="assists">Assists</label>
+            <input type="number" class="form-control">
+          </div>
+          <div class="form-group">
+              <label for="points">Points</label>
+              <input type="number" class="form-control">
+          </div>
+            
+        </div>
+      </div>
+    </form>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" (click)="c('Close click')">Close</button>
