--- a/abf-statracker/src/app/add-stat/add-stat.component.html
+++ b/abf-statracker/src/app/add-stat/add-stat.component.html
@@ -19,7 +19,7 @@
             </div>
           <div class="form-group">
               <label for="minutes">Minutes</label>
-              <input type="time" class="form-control">
+              <input type="number" class="form-control">
           </div>
           <div class="form-group">
             <label for="rebounds">Rebounds</label>
