--- a/abf-statracker/src/app/app.component.html
+++ b/abf-statracker/src/app/app.component.html
@@ -3,11 +3,7 @@
 <main role="main" class="container">
 
   <div class="starter-template">
-    <h1>Bootstrap starter template</h1>
-    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-    <h3>Course List</h3>
-    <app-stats-list></app-stats-list>
-    <app-add-stat></app-add-stat>
+    <router-outlet></router-outlet>
   </div>
 
 </main>
