Can create new rooms

--- a/abf-statracker/src/app/home/home.component.css
+++ b/abf-statracker/src/app/home/home.component.css
@@ -1,4 +1,4 @@
-.form-control {
+/* .form-control {
     width: 50%;
 }
 
@@ -10,7 +10,11 @@
     font-size: 2.25rem;
 }
 
+.btn-md {
+    font-size: 3.25rem;
+}
+
 .btn-primary {
     background-color: #57606b;
     border-color: #57606b;
-}
+} */
