--- a/abf-statracker/src/app/home/home.component.html
+++ b/abf-statracker/src/app/home/home.component.html
@@ -8,15 +8,18 @@
     <app-add-stat-page (clicked)="addStatChange($event)" *ngIf="addStat"></app-add-stat-page>
     <div *ngIf="!addStat">
       <input class="form-control form-control-lg" id="roomCode" type="text" placeholder="Enter a room code">
-      <button (click)="newRoom(false)">Create Room with random room code</button>
-      <button (click)="newRoom(true)">Create Room with entered room code</button>
+      <button class="btn btn-sm btn-outline-primary" (click)="newRoom(true)">Create Room with entered room code</button>
+      <button class="btn btn-sm btn-outline-primary" (click)="newRoom(false)">Create Room with random room code</button>
     </div>
   </div>
 
   <div class='col'>
-    <input class="form-control form-control-lg" id="inputsm" type="text" placeholder="Room code...">
+    <button *ngIf="!enterRoom" class="btn btn-lg btn-outline-primary" (click)="showInputRoom()">Enter Existing Room</button>
+    <div *ngIf="enterRoom">
+      <input class="form-control form-control-lg" id="inputsm" type="text" placeholder="Room code...">
+      <button type="button" class="btn btn-primary btn-lg" (click)="go()">Go</button>
+    </div>
   </div>
 </div>
 <pre>{{validResult}}</pre>
 <br>
-<button type="button" class="btn btn-primary btn-lg" (click)="go()">Go</button>
